# thisiscpp

./: .clang-format  CMakeLists.txt  README.md
src/thisiscpp/class_demo/: CMakeLists.txt  class_demo.h  class_demo_test.cc
src/thisiscpp/modern_cpp/: CMakeLists.txt
src/thisiscpp/modern_cpp/c11/: CMakeLists.txt
src/thisiscpp/modern_cpp/c11/asynchronous/: CMakeLists.txt  README.md  async_demo.cc  future_demo.cc  packaged_task_demo.cc  promise_demo.cc
src/thisiscpp/modern_cpp/c11/basic/: README.md
src/thisiscpp/modern_cpp/c11/functional/: CMakeLists.txt  README.md  bind_demo.cc
src/thisiscpp/modern_cpp/c11/template/: CMakeLists.txt  README.md  trailing_return_type_demo.cc
src/thisiscpp/modern_cpp/c14/: CMakeLists.txt  c14_demo.cc
src/thisiscpp/modern_cpp/c17/: CMakeLists.txt  c17_demo.cc
src/thisiscpp/priority_queue/: CMakeLists.txt  priority_queue.h  priority_queue_test.cc  simple_priority_queue.h  simple_priority_queue_test.cc
src/thisiscpp/singleton_pattern/: CMakeLists.txt  eager_singleton.h  lazy_singleton.h  singleton_pattern_test.cc
src/thisiscpp/thread_pool/: CMakeLists.txt  README.md  thread_pool.h  thread_pool_test.cc
thread_safe_queue/: message_queue.h  test_message_queue.cc
